# smg-pyorbslam3

./: .gitignore  CMakeLists.txt  LICENCE  MANIFEST.in  pyorbslam3.cpp  pyorbslam3.pyi  setup.py
cmake/: LinkOpenCV.cmake  LinkOpenNI.cmake  UseORBSLAM.cmake  UseOpenCV.cmake  UseOpenNI.cmake
examples/: try_imu_points.py  try_mono_intertial_tracking.py
sandbox/: main.py
smg/pyorbslam3/: __init__.py
smg/pyorbslam3/python/: monocular_tracker.py  rgbd_tracker.py
